--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -47,7 +47,7 @@ jobs:
        - name: Install Go
          uses: actions/setup-go@v2
          with:
-           go-version: 1.15
+           go-version: '1.15.7'
       - uses: actions/checkout@v2
 
       - name: Build bin
