--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: main
+  IMAGE_NAME: master
 
 jobs:
   # Run tests.
@@ -34,7 +34,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.15.7'
+          go-version: '1.15.8'
       - uses: actions/checkout@v2
 
       - name: Build bin
